# prefab

./: .gitignore  LICENSE  README.md
dotfiles/system/: 50-synaptics.conf
dotfiles/user/: Xdefaults  gtkrc-2.0  sbclrc  user-dirs.dirs  xinitrc  zshrc  zshrc.local
dotfiles/user/emacs.d/: init.el
dotfiles/user/gtk-3.0/: settings.ini
dotfiles/user/i3/: config
dotfiles/user/mpd/: mpd.conf
dotfiles/user/mpv/: mpv.conf
dotfiles/user/nvim/: dein.toml  init.vim
dotfiles/user/nvim/after/ftplugin/: c.vim  dart.vim  go.vim  html.vim
dotfiles/user/sway/: config
dotfiles/user/termite/: config
qol/startpage/: home.html  style.css
qol/templates/c-makefile/: Makefile  build.conf.mk  project.conf.mk
qol/templates/cmake-lib/: CMakeLists.txt
qol/templates/cmake-lib/examples/: CMakeLists.txt  main.cpp
qol/templates/cmake-lib/src/: CMakeLists.txt  mylib.cpp  mylib.h
qol/templates/cmake-qt/: CMakeLists.txt
qol/templates/cmake-sfml/: CMakeLists.txt
scripts/: copy-template.sh  generate-background.sh  lock-script.sh  screenshot.sh
setup/: copy-user-configs.sh  copy-user-scripts.sh  create-directories.sh  setup-symlinks.sh
